# perambulator

./: .pre-commit-config.yaml  01_parse_boundaries.py  02_compare_enfield_corners.py  2025-10-09_nh-boundaries.geojson  compare_enfield_corners.py  enfield_corner_inaccuracy.json  nh_municipalities.json  parse_boundaries.py  pyproject.toml  readme.md
src/nh_boundaries/: __init__.py
