[project]
name = "nh-boundaries"
version = "0.1.0"
description = "Analysis of New Hampshire town boundaries"
requires-python = ">=3.14"
dependencies = [
    "polars>=1.19.0",
    "shapely>=2.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nh_boundaries"]

