[project]
name = "nh-boundaries"
version = "0.1.0"
description = "Analysis of New Hampshire town boundaries"
requires-python = ">=3.14"
dependencies = [
    "pint>=0.25",
    "polars>=1.34.0",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nh_boundaries"]

