[project]
name = "nh-boundaries"
version = "0.1.0"
description = "Analysis of New Hampshire town boundaries"
# upgrade to 3.14 when more prebuilt wheels are available
requires-python = "==3.14.*"
dependencies = [
    "marimo>=0.16.5",
    "pint>=0.25",
    "plotnine>=0.15.0",
    "polars>=1.34.0",
    "pre-commit>=4.3.0",
    "pyarrow>=21.0.0",
    "pygeodesy>=25.9.9",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
]


[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "C90",  # mccabe
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "FURB",  # refurbish and modernize
    "I",  # isort
    "PT",  # flake8-pytest-style
    "RUF",  # ruff
    "SIM",  # simplify
    "UP",  # pyupgrade
    "W",  # pycode warnings
]
ignore = [
    "E501",  # line too long
    "RUF001",  # ambiguous Unicode characters in strings
    "B018",  # Found useless expression
]

# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[tool.mypy]
python_version = "3.14"
strict = true
pretty = true
show_error_context = true
